// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`excludes things when asked 1`] = `
Array [
  Object {
    "flavor": "pg",
    "name": "public",
    "tables": Array [
      Object {
        "columns": Array [
          Object {
            "columnType": "text",
            "foreignKeys": Array [],
            "name": "id",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "foreignKeys": Array [],
            "name": "created_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "foreignKeys": Array [],
            "name": "updated_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
        ],
        "name": "users",
        "primaryKeyColumn": "id",
        "primaryKeyType": "string",
      },
      Object {
        "columns": Array [
          Object {
            "columnType": "text",
            "foreignKeys": Array [],
            "name": "id",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "foreignKeys": Array [],
            "name": "created_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "foreignKeys": Array [],
            "name": "updated_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "text",
            "foreignKeys": Array [],
            "name": "source",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "text",
            "foreignKeys": Array [],
            "name": "uniqueIdentifier",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "text",
            "foreignKeys": Array [
              Object {
                "column": "id",
                "schema": "public",
                "table": "users",
              },
            ],
            "name": "userId",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "jsonb",
            "foreignKeys": Array [],
            "name": "rawUserData",
            "nullable": true,
            "type": "JSON",
            "uniqueConstraints": Array [],
          },
        ],
        "name": "userAccounts",
        "primaryKeyColumn": "id",
        "primaryKeyType": "string",
      },
    ],
  },
]
`;

exports[`returns a schema in the right shape 1`] = `
Array [
  Object {
    "flavor": "pg",
    "name": "public",
    "tables": Array [
      Object {
        "columns": Array [
          Object {
            "columnType": "integer",
            "foreignKeys": Array [],
            "name": "id",
            "nullable": false,
            "type": "number",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "character varying",
            "foreignKeys": Array [],
            "name": "name",
            "nullable": true,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "integer",
            "foreignKeys": Array [],
            "name": "batch",
            "nullable": true,
            "type": "number",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "foreignKeys": Array [],
            "name": "migration_time",
            "nullable": true,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
        ],
        "name": "knex_migrations",
        "primaryKeyColumn": "id",
        "primaryKeyType": "number",
      },
      Object {
        "columns": Array [
          Object {
            "columnType": "integer",
            "foreignKeys": Array [],
            "name": "index",
            "nullable": false,
            "type": "number",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "integer",
            "foreignKeys": Array [],
            "name": "is_locked",
            "nullable": true,
            "type": "number",
            "uniqueConstraints": Array [],
          },
        ],
        "name": "knex_migrations_lock",
        "primaryKeyColumn": "index",
        "primaryKeyType": "number",
      },
      Object {
        "columns": Array [
          Object {
            "columnType": "text",
            "foreignKeys": Array [],
            "name": "id",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "foreignKeys": Array [],
            "name": "created_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "foreignKeys": Array [],
            "name": "updated_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
        ],
        "name": "users",
        "primaryKeyColumn": "id",
        "primaryKeyType": "string",
      },
      Object {
        "columns": Array [
          Object {
            "columnType": "text",
            "foreignKeys": Array [],
            "name": "id",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "foreignKeys": Array [],
            "name": "created_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "timestamp with time zone",
            "foreignKeys": Array [],
            "name": "updated_at",
            "nullable": false,
            "type": "Date",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "text",
            "foreignKeys": Array [],
            "name": "source",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "text",
            "foreignKeys": Array [],
            "name": "uniqueIdentifier",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "text",
            "foreignKeys": Array [
              Object {
                "column": "id",
                "schema": "public",
                "table": "users",
              },
            ],
            "name": "userId",
            "nullable": false,
            "type": "string",
            "uniqueConstraints": Array [],
          },
          Object {
            "columnType": "jsonb",
            "foreignKeys": Array [],
            "name": "rawUserData",
            "nullable": true,
            "type": "JSON",
            "uniqueConstraints": Array [],
          },
        ],
        "name": "userAccounts",
        "primaryKeyColumn": "id",
        "primaryKeyType": "string",
      },
    ],
  },
]
`;
